# ReasoningSchema

./: .gitignore  AutomatonRuleCost.cpp  AutomatonRuleCost.h  BehaviorToProgram.cpp  BehaviorToProgram.h  BitInBittree.cpp  BitInBittree.h  BittreeInputOutputType.cpp  BittreeInputOutputType.h  BittreeNode.cpp  BittreeNode.h  BittreeTaskType.cpp  BittreeTaskType.h  BittreeTypeExpression.cpp  BittreeTypeExpression.h  Bitvector.cpp  Bitvector.h  BitvectorTasks.cpp  BitvectorTasks.h  CMakeLists.txt  CanvasAndBittreeProgram.cpp  CanvasAndBittreeProgram.h  CompactPoset.cpp  CompactPoset.h  ConceptsPer_MaskAndCost.cpp  DecisionTree.cpp  DecisionTree.h  DeltaBittreeType.cpp  DeltaBittreeType.h  IncrementalTypeExpression.cpp  IncrementalTypeExpression.h  LabeledGraph.cpp  LabeledGraph.h  LanguagesOverBooleanFunctions.cpp  LanguagesOverBooleanFunctions.h  Mask.cpp  Mask.h  MaskAndCostAndInstantiatedModules.h  MaskAndCostAndModules.cpp  MetaExample.cpp  (+41 more)
